--- a/src/Resources/app/administration/src/assets/scss/global.scss
+++ b/src/Resources/app/administration/src/assets/scss/global.scss
@@ -1,3 +1,8 @@
+.bc-base__card-headline {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+}
 .bc-base__description-text {
     font-size: 14px;
 }
@@ -22,4 +27,10 @@
 }
 .bc__my-2 {
     @extend .bc__mt-2, .bc__mb-2;
+}
+.bc-colorpicker {
+
+    > .sw-field {
+        margin: 0;
+    }
 }
