register blur-elysium-slide-selection component

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -47,6 +47,10 @@
                                         :title="$tc('blurElysiumSlider.cmsElement.settings.slideCollectionTitle')" 
                                         class="bc-card bc-card__static-title">
 
+                                        {% block blur_cms_config_elysium_slide_selection_component %}
+                                            <blur-elysium-slide-selection />
+                                        {% endblock %}
+
                                         {% block blur_cms_config_elysium_slider_collection %}
                                             <sw-entity-multi-id-select
                                                 v-model="elysiumSlideCollection"
