add search-bar basic setup

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -48,7 +48,8 @@
                                         class="bc-card bc-card__static-title">
 
                                         {% block blur_cms_config_elysium_slide_selection_component %}
-                                            <blur-elysium-slide-selection />
+                                            <blur-elysium-slide-selection 
+                                                :selected-slides="elysiumSlideCollection" />
                                         {% endblock %}
 
                                         {% block blur_cms_config_elysium_slider_collection %}
