--- a/src/Resources/app/administration/src/component/blur-elysium-slide-selection/template.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-selection/template.twig
@@ -1,5 +1,47 @@
-<template>
-    <div>
-        Elysium Slide Selection
+<div>
+    <div style="margin-bottom:.5rem;">
+        {{ $tc('ElysiumSlidesSelectionLabel') }}
     </div>
-</template>
+
+    <div style="position:relative;">
+        <sw-simple-search-field
+            ref="slideSearchField"
+            v-model="searchTerm"
+            :delay="300" 
+            variant="form"
+            @focus="focusSearch"
+            @blur="blurSearch" />
+
+        <template v-if="searchFocus === true">
+
+            <template v-if="elysiumSlides.length > 0">
+                <sw-select-result-list 
+                    ref="resultList"
+                    :options="elysiumSlides"
+                    :empty-message="$tc('NoElysiumSlidesFound')"
+                    :focus-el="$refs.slideSearchField.$el.querySelector('input')"
+                    @item-select="selectSlide"
+                >
+
+                    <template #result-item="{item, index}">
+                        <slot
+                            name="result-item"
+                            v-bind="{ item, index }"
+                        >
+                            <li
+                                is="sw-select-result"
+                                v-bind="{ item, index }"
+                                @item-select="selectSlide">
+                                <div>{{ item.name }}</div>
+                                <div style="font-weight:600;">{{ item.title }}</div>
+                            </li>
+                        </slot>
+
+                    </template>
+                </sw-select-result-list>
+
+            </template>
+        </template>        
+    </div>
+
+</div>
