--- a/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.twig
@@ -1,69 +1,89 @@
-<div>
-    <div style="margin-bottom:.5rem;">
-        {{ $tc('ElysiumSlidesSelectionLabel') }}
-    </div>
+{% block blur_elysium_slide_selection %}
+    <div>
 
-    <div style="position:relative;">
-        <sw-simple-search-field
-            ref="slideSearchField"
-            v-model="searchTerm"
-            :delay="300" 
-            variant="form"
-            @focus="focusSearch"
-            @blur="blurSearch" />
+        {% block blur_elysium_slide_selection_label %}
+            <div class="blur-es-selection-label">
+                {{ $tc('blurElysiumSlides.slideSelection.label') }}
+            </div>
+        {% endblock %}
 
-        <template v-if="searchFocus === true">
+        {% block blur_elysium_slide_selection_search %}
+            <div class="blur-es-selection__search">
 
-                <sw-select-result-list 
-                    ref="resultList"
-                    :options="elysiumSlides"
-                    :empty-message="$tc('NoElysiumSlidesFound')"
-                    :focus-el="$refs.slideSearchField.$el.querySelector('input')"
-                    @item-select="selectSlide"
-                >
+                {% block blur_elysium_slide_selection_search_bar %}
+                    <sw-simple-search-field
+                        ref="slideSearchField"
+                        v-model="searchTerm"
+                        :delay="300" 
+                        variant="form"
+                        @focus="focusSearch"
+                        @blur="blurSearch" />
+                {% endblock %}
 
-                    <template #result-item="{item, index}">
-                        <slot
-                            name="result-item"
-                            v-bind="{ item, index }"
+                <template v-if="searchFocus === true">
+
+                    {% block blur_elysium_slide_selection_search_result_list %}
+                        <sw-select-result-list 
+                            ref="resultList"
+                            :options="elysiumSlides"
+                            :empty-message="$tc('blurElysiumSlides.slideSearch.noResult')"
+                            :focus-el="$refs.slideSearchField.$el.querySelector('input')"
+                            @item-select="selectSlide"
                         >
-                            <li
-                                is="sw-select-result"
-                                :selected="slideIsSelected( item )"
-                                v-bind="{ item, index }"
-                                @item-select.prevent="selectSlide">
-                                <div>{{ item.name }}</div>
-                                <div style="font-weight:600;">{{ item.title }}</div>
-                            </li>
-                        </slot>
 
-                    </template>
-                </sw-select-result-list>
+                            <template #result-item="{item, index}">
 
-        </template>        
+                                <slot
+                                    name="result-item"
+                                    v-bind="{ item, index }"
+                                >
+                                    {% block blur_elysium_slide_selection_search_result_item %}
+                                        <li
+                                            is="sw-select-result"
+                                            :selected="slideIsSelected( item )"
+                                            v-bind="{ item, index }"
+                                            @item-select.prevent="selectSlide">
+                                            <div>{{ item.name }}</div>
+                                            <div style="font-weight:600;">{{ item.title }}</div>
+                                        </li>
+                                    {% endblock %}
+                                </slot>
+
+                            </template>
+                        </sw-select-result-list>
+                    {% endblock %}
+
+                </template>        
+            </div>
+        {% endblock %}
+
+        {% block blur_elysium_slide_selection_list_container %}
+            <div v-if="selectedSlides.length > 0"
+                class="blur-es-selection__list-container">
+
+                {% block blur_elysium_slide_selection_list_label %}
+                    <div class="blur-es-selection__list-label">
+                        {{ $tc('blurElysiumSlides.slideSelection.list.label') }}
+                    </div>
+                {% endblock %}
+
+                {% block blur_elysium_slide_selection_list %}
+                    <div class="blur-es-selection__list">
+                        {% block blur_elysium_slide_selection_list_item %}
+                            <blur-elysium-slide-select-item 
+                                v-for="slide in selectedSlides" 
+                                :key="slide"
+                                :selected-slide="slide" 
+                                @position-up="slidePositionUp"
+                                @position-down="slidePositionDown"
+                                @remove-slide="onRemoveSlide" />
+                        {% endblock %}
+                    </div>
+                {% endblock %}
+            </div>
+            <p v-else class="blur-es-selection__list-helptext" 
+                v-html="$tc('blurElysiumSlides.slideSelection.list.helptext')" />
+        {% endblock %}
+
     </div>
-
-    <div v-if="selectedSlides.length > 0"
-        style="padding:1rem 0;">
-
-        <div style="margin-bottom:1rem;">
-            {{ $tc('ElysiumSlidesSelection') }}
-        </div>
-
-        <div style="display:grid;grid-template-columns:minmax(0, 1fr);grid-gap:1rem;">
-            <blur-elysium-slide-select-item 
-                v-for="slide in selectedSlides" 
-                :key="slide"
-                :selected-slide="slide" 
-                @position-up="slidePositionUp"
-                @position-down="slidePositionDown"
-                @remove-slide="onRemoveSlide" />
-        </div>
-    </div>
-    <p v-else style="padding:1rem 0;">
-        {{ $tc('ElysiumSlidesHepltext') }}
-        Klicke in das Suchfeld und wähle aus deinen Slide Sammlung aus<br/>
-        Deine Slides findest du unter <b>Inhalte &rsaquo; Elysium Slides</b>, dort kannst du auch neue Slides erstellen.
-    </p>
-
-</div>
+{% endblock %}
