add action snippet to search-result item

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -22,7 +22,7 @@
                             <div>
                                 {{slideData.name}}
                             </div>
-                            <div>
+                            <div style="font-size: 1rem;">
                                 {{slideData.title}}
                             </div>
                         </div>
