--- a/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.scss
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.scss
@@ -6,6 +6,18 @@
     position: relative;
 }
 
+.blur-es-selection__search-result-list-item {
+    grid-template-columns: auto 1fr auto auto;
+    align-items: center;
+}
+
+.blur-es-selection__search-result-item {
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) auto;
+    align-items: center;
+    grid-gap: 1rem;
+}
+
 .blur-es-selection__list-helptext {
     padding:1rem 0;
     line-height:1.5;
