wip: extend cms-element template for video support

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
@@ -22,6 +22,7 @@
                         :label="$tc('BlurElysiumSlides.mediaForm.uploadInput.title')"
                         :help-text="$tc('BlurElysiumSlides.mediaForm.uploadInput.helpText')"
                         :default-folder="entityName"
+                        file-accept="*/*"
                         @media-drop="payload => setMedia( payload.id, 'slideCover' )"
                         @media-upload-remove-image="payload => resetMedia( 'slideCover' )"
                         @media-upload-sidebar-open="mediaSidebar.openContent()"
