adjust video preview in component blur-elysium-slide-select-item

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.scss
@@ -27,6 +27,10 @@
 
 .blur-es-list-item__slide-image {
     flex: 0 1 auto;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .blur-es-list-item__slide-image-element {
