fix #43 'use as cover' context-menu functionality

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -173,8 +173,11 @@
                                 slot="context-menu-items"
                                 slot-scope="media"
                             >
-                                <sw-context-menu-item @click="setMediaFromSidebar(media.mediaItem)">
+                                <sw-context-menu-item @click="setMedia(media.mediaItem.id, 'slideCover')">
                                     {{ $tc('BlurElysiumSlides.mediaForm.useAsCover') }}
+                                </sw-context-menu-item>
+                                <sw-context-menu-item @click="setMedia(media.mediaItem.id, 'slideCoverPortrait')">
+                                    {{ $tc('BlurElysiumSlides.mediaForm.useAsCoverPortrait') }}
                                 </sw-context-menu-item>
                             </template>
                         </sw-sidebar-media-item>
