add drag support on selection-list

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -1,5 +1,9 @@
 {% block blur_elysium_slide_select_item %} 
-    <div class="blur-es-list-item">
+    <div class="blur-es-list-item"
+        ref="selectItem"
+        draggable
+        @dragstart="startDrag($event)"
+        @dragenter="overDrag($event)">
 
         <template v-if="slideData && isLoading === false">
 
