--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
@@ -2,7 +2,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
     width: 100%;
     flex: 1 1 100%;
     position: relative;
@@ -13,7 +12,7 @@
     flex: 1 1 100%;
     min-height: 20rem;
     background-color: #f6f6f6;
-    border-radius: 10px;
+    border-radius: 0;
     display: flex;
     align-items: center;
     padding: 3rem 6rem;
