add quick-edit action to select-item

--- a/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-select-item/blur-elysium-slide-select-item.twig
@@ -61,6 +61,17 @@
                         </sw-button>
                     {% endblock %}
 
+                    {% block blur_elysium_slide_select_item_silde_edit %}
+                        <sw-button 
+                            class="blur-es-list-item__icon-button"
+                            variant="context"
+                            :disabled="false" 
+                            :isLoading="isLoading"
+                            @click="editSlide">
+                            <sw-icon name="regular-file-edit" size="16" color="#189eff"></sw-icon>
+                        </sw-button>
+                    {% endblock %}
+
                     {% block blur_elysium_slide_select_item_silde_action_remove %}
                         <sw-button 
                             class="blur-es-list-item__icon-button"
