--- a/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.twig
+++ b/src/Resources/app/administration/src/component/blur-elysium-slide-selection/blur-elysium-slide-selection.twig
@@ -90,6 +90,7 @@
                                 @over-drag="onDrag"
                                 @position-up="slidePositionUp"
                                 @position-down="slidePositionDown"
+                                @edit-slide="onEditSlide"
                                 @remove-slide="onRemoveSlide" />
                         {% endblock %}
                     </div>
