--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -47,6 +47,24 @@
                                         :title="$tc('blurElysiumSlider.cmsElement.settings.slideCollectionTitle')" 
                                         class="bc-card bc-card__static-title">
 
+                                        <template v-if="blurElysiumSlides.length === 0">
+                                            <div class="blur-elysium-slider-config__no-slides">
+                                                <p style="margin-bottom:1rem;line-height:1.5;">
+                                                    Seems you haven't any Slides yet. Head over to the Elysium Slides Module and create some.
+                                                </p>
+                                                <div class="blur-elysium-slider-config__no-slides-actions">
+                                                    <sw-button
+                                                        variant="primary"
+                                                        @click="onCreateSlide">
+                                                        Create Slide
+                                                    </sw-button>
+                                                    <sw-button
+                                                        @click="onSlideOverview">
+                                                        To Overview
+                                                    </sw-button>
+                                                </div>
+                                            </div>
+                                        </template>
                                         {% block blur_cms_config_elysium_slide_selection_component %}
                                             <blur-elysium-slide-selection 
                                                 :selected-slides="elysiumSlideCollection" />
