filter orphan sildes from selected-slides in cms-config

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -67,7 +67,7 @@
                                         </template>
                                         {% block blur_cms_config_elysium_slide_selection_component %}
                                             <blur-elysium-slide-selection 
-                                                :selected-slides="elysiumSlideCollection" />
+                                                :selected-slides="selectedSlides" />
                                         {% endblock %}
                                     </sw-card>
                                 {% endblock %}
