rework cms-components

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.scss
@@ -24,6 +24,7 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+    /*
     &:after {
         content: '';
         display: block;
@@ -34,6 +35,7 @@
         height: 100%;
         background-color: rgba(0,0,0,0.1);
     }
+    */
 }
 
 .blur-cms-el-elysium-slider__slider-preview__container {
