--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
@@ -1,87 +1,35 @@
 {% block blur_cms_element_elysium_slider %}
-    <div class="blur-cms-el-elysium-slider">
-       
-        {# template loaded if there are no slides in config #}
-        <template v-if="previewData !== null && previewData.length > 0">
-            
-            {% block blur_cms_element_elysium_slider_preview %}
-                <div class="blur-cms-el-elysium-slider__slider-preview" 
-                    v-bind:style="{ color: inlineColor, backgroundImage: 'url(' + mediaUrl + ')' }">
-
-                    {% block blur_cms_element_elysium_slider_preview_container %}
-                        <div class="blur-cms-el-elysium-slider__slider-preview__container">
-                            
-                            {% block blur_cms_element_elysium_slider_preview_title %}
-                                <div v-if="previewData[slideIndex].title" class="blur-cms-el-elysium-slider__slider-preview__title">
-                                    {{ previewData[slideIndex].title }}
-                                </div>
-                            {% endblock %}
-                            
-                            {% block blur_cms_element_elysium_slider_preview_description %}
-                                <div v-if="previewData[slideIndex].description" class="blur-cms-el-elysium-slider__slider-preview__description">
-                                    {{ previewData[slideIndex].description }}
-                                </div>
-                            {% endblock %}
-
-                            {% block blur_cms_element_elysium_slider_preview_actions %}
-                                <div v-if="previewData[slideIndex].button_label" class="blur-cms-el-elysium-slider__slider-preview__actions">
-                                    
-                                    {% block blur_cms_element_elysium_slider_preview_button_element %}
-                                        <span class="sw-button blur-cms-el-elysium-slider__slider-preview__button-element">
-                                            {{ previewData[slideIndex].button_label }}
-                                        </span>
-                                    {% endblock %}
-                                </div>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
-
-                    {% block blur_cms_element_elysium_slider_preview_navigation_prev %}
-                        <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-prev"
-                                name="default-arrow-head-left"
-                                size="24"
-                                :color="sliderArrowColor"
-                                @click="slideArrowClick( -1 )">
-                        </sw-icon>
-                    {% endblock %}
-                    {% block blur_cms_element_elysium_slider_preview_navigation_next %}
-                        <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-next"
-                                name="default-arrow-head-right"
-                                size="24"
-                                :color="sliderArrowColor"
-                                @click="slideArrowClick( 1 )">
-                        </sw-icon>
-                    {% endblock %}
-                </div>
-            {% endblock %}
-        </template>            
-
-        <template v-else>
+    <div class="blur-cms-el-elysium-slider">   
 
             {% block blur_cms_element_elysium_slider_preview_empty %}
-                <div class="blur-cms-el-elysium-slider__slider-preview">
+                <div class="blur-cms-el-elysium-slider__slider-preview"
+                    :style="{
+                        backgroundColor: getSlideSetting( 'slideBgColor' ),
+                        backgroundImage: 'url(' + getSlideMedia( 'url' ) + ')'
+                    }">
 
                     {% block blur_cms_element_elysium_slider_preview_empty_container %}
                         <div class="blur-cms-el-elysium-slider__slider-preview__container">
 
                             {% block blur_cms_element_elysium_slider_preview_empty_title %}
                                 <div class="blur-cms-el-elysium-slider__slider-preview__title">
-                                    {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultTitleValue' ) }}
+                                    {{ getPreview( 'title', 'blurElysiumSlider.cmsElement.component.preview.defaultTitleValue' ) }}
                                 </div>
                             {% endblock %}
 
                             {% block blur_cms_element_elysium_slider_preview_empty_description %}
                                 <div class="blur-cms-el-elysium-slider__slider-preview__description">
-                                    {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultDescriptionValue' ) }}
+                                    {{ getPreview( 'description', 'blurElysiumSlider.cmsElement.component.preview.defaultDescriptionValue' ) }}
                                 </div>
                             {% endblock %}
 
                             {% block blur_cms_element_elysium_slider_preview_empty_actions %}
-                                <div class="blur-cms-el-elysium-slider__slider-preview__actions">
+                                <div v-if="getPreview( 'button_label', 'blurElysiumSlider.cmsElement.component.preview.defaultButtonLabelValue' )"
+                                    class="blur-cms-el-elysium-slider__slider-preview__actions">
                                     
                                     {% block blur_cms_element_elysium_slider_preview_empty_button_element %}
                                         <span class="sw-button blur-cms-el-elysium-slider__slider-preview__button-element">
-                                            {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultButtonLabelValue' ) }}
+                                            {{ getPreview( 'button_label', 'blurElysiumSlider.cmsElement.component.preview.defaultButtonLabelValue' ) }}
                                         </span>
                                     {% endblock %}
                                 </div>
@@ -89,22 +37,28 @@
                         </div>
                     {% endblock %}
 
-                    {% block blur_cms_element_elysium_slider_preview_empty_navigation_prev %}
-                        <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-prev"
-                                name="default-arrow-head-left"
-                                size="24">
-                        </sw-icon>
-                    {% endblock %}
-                    {% block blur_cms_element_elysium_slider_preview_empty_navigation_next %}
-                        <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-next"
-                                name="default-arrow-head-right"
-                                size="24">
-                        </sw-icon>
-                    {% endblock %}
+                    <template v-if="selectedSlidesCollection && selectedSlidesCollection.length > 0">
+                        {% block blur_cms_element_elysium_slider_preview_empty_navigation_prev %}
+                            <sw-icon 
+                                    v-if="slideIndex !== 0"
+                                    class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-prev"
+                                    name="default-arrow-head-left"
+                                    @click="slideArrowClick( -1 )"
+                                    size="24">
+                            </sw-icon>
+                        {% endblock %}
+                        {% block blur_cms_element_elysium_slider_preview_empty_navigation_next %}
+                            <sw-icon v-if="slideIndex !== (selectedSlidesCollection.length - 1)"
+                                    class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-next"
+                                    name="default-arrow-head-right"
+                                    @click="slideArrowClick( 1 )"
+                                    size="24">
+                            </sw-icon>
+                        {% endblock %}
+                    </template>
 
                 </div>
             {% endblock %}
-                
-        </template>
+
     </div>
 {% endblock %}
